--- a/package.json
+++ b/package.json
@@ -1,37 +1,41 @@
 {
-  "name": "ExampleReactApp",
+  "name": "ExampleTypeScriptReactApp",
   "version": "1.0.0",
   "description": "A template for everyone to use",
-  "main": "index.js",
+  "main": "index.jsx",
   "scripts": {
     "start": "webpack serve",
     "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/LittleHillMYR/ExampleReactApp.git"
+    "url": "git+https://github.com/LittleHillMYR/ExampleTypeScriptReactApp.git"
   },
   "keywords": [],
   "author": "Little Hill MYR",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/LittleHillMYR/ExampleReactApp/issues"
+    "url": "https://github.com/LittleHillMYR/ExampleTypeScriptReactApp/issues"
   },
-  "homepage": "https://github.com/LittleHillMYR/ExampleReactApp#readme",
+  "homepage": "https://github.com/LittleHillMYR/ExampleTypeScriptReactApp#readme",
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.14.5",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.6",
     "sass": "^1.35.0",
     "sass-loader": "^12.1.0",
     "style-loader": "^2.0.0",
+    "typescript": "^4.3.2",
     "webpack": "^5.39.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
